--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-.bluetest {
-    background-color: blue;
-}
-
 /* Global class: remove presets on hyperlinks */
 a {
     color: inherit;
@@ -40,6 +36,7 @@ body {
 #footer {
     position:relative;
     bottom: 0;
+    background-color: white;
 }
 
 
@@ -52,4 +49,25 @@ body {
 
 main {
     flex: 1 0 auto;
+}
+
+
+/* Game area */
+
+
+/* Classes */
+/* Card images */
+.card-image {
+    width: 140px;
+    height: 210px;
+    padding: 10px;
+    border: 5px solid black;
+    margin-top: 10px;
+}
+
+
+/* Center the cards within the divs */
+.card-div {
+    display: inline-block;
+    text-align: center;
 }
