style: add hidden class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@ a {
     text-decoration: inherit;
 }
 
+/* Global class: game: hidden*/
+.hidden {
+    visibility: hidden;
+}
+
 /* Global class: make width 95% */
 
 .w95 {
