--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ body {
 /* Whole header secion */
 #header-section {
     height: 120px;
+    width: 100%;
     background-color: #F5F5F5;
 }
 
@@ -88,6 +89,7 @@ body {
 /* Navigation unordered list */
 #nav-list {
     justify-content: right;
+    margin: 0;
 }
 
 /*Individual list items */
@@ -140,6 +142,7 @@ body {
 .nav-icon-top {
     text-align: left;
     padding-left: 5px;
+    margin: 0;
 }
 
 /* Navigation link name */
@@ -179,6 +182,46 @@ body {
 /* --------------- MAIN SECTIONS ------------ */
 main {
     flex: 1 0 auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Game area */
+
+
+/* Classes */
+/* Card images */
+.card-image {
+    width: 140px;
+    height: 210px;
+    padding: 10px;
+    border: 5px solid black;
+    margin-top: 10px;
+}
+
+
+/* Center the cards within the divs */
+.card-div {
+    display: inline-block;
+    text-align: center;
+}
+
+/* Game length display box */
+#length-box {
+    height: 100px;
+    width: 100px;
+    border: solid 1px black;
 }
 
 /* --------------- FOOTER ------------------- */
@@ -236,6 +279,7 @@ main {
     margin-top: 5px;
     width: 150px;
     border-radius: 15%;
+    margin-right: 10px;
 }
 
 /* Footer GitHub Content */
@@ -258,46 +302,104 @@ main {
 
 
 
+/* --------- Phone Media Queries ------------------------ */
+@media screen and (max-width: 767px) {
+    /*Make total head space 160*/
+    #header-section {
+        height: 160px;
+    }
+    /* New header logo height and width */
+    #header-logo {
+        height: 70px;
+        width: 100%;
+        text-align: center;
+    }
+    /* Logo positioning */
+    #logo {
+        padding: 20px;
+    }
 
+    /* New navigation bar height and width*/
+    #nav-links-div {
+        height: 90px;
+        width: 100%;
+    }
 
+    /* Navigation bar UL new height and centred */
+    #nav-list {
+        height: 90px;
+        justify-content: center;
+    }
 
+    /* Gaps between navigation bar items */
+    .nav-list-item {
+        margin-left: 15px;
+        margin-right: 15px;
+        font-size: 11pt;
+    }
 
+    /* Rotate the navigation bar cards */
+    .nav-link-red,
+    .nav-link-black {
+        width: 113px;
+        height: 82px;
+        border: 2px solid black;
+        border-radius: 8%;
+        margin: auto;
+        background-color: #F5F5F5;
+    }
+    .nav-link-red-hover{
+        width: 113px;
+        height: 82px;
+        border: 2px solid black;
+        border-radius: 8%;
+        margin: auto;
+        background-color: #CF1020;
+        color: #F5F5F5;
+    }
+    .nav-link-black-hover{
+        width: 113px;
+        height: 82px;
+        border: 2px solid black;
+        border-radius: 8%;
+        margin: auto;
+        background-color: #333A3F;
+        color: #F5F5F5;
+    }
+    #home-text,
+    #how-to-play-text,
+    #contact-me-text {
+        padding: 0;
+    }
+    .nav-icon-top {
+        text-align: right;
+        padding-right: 5px;
+    }
+    .nav-item-name {
+        margin-top: 5px;
+    }
+    .nav-icon-bottom {
+        text-align: left;
+        padding-left: 5px;
+    }
+    #nav-icon-bottom-home,
+    #nav-icon-bottom-how,
+    #nav-icon-bottom-contact {
+        padding-top: 5px;
+    }
 
-
-
-
-
-
-
-
-
-
-
-/* Game area */
-
-
-/* Classes */
-/* Card images */
-.card-image {
-    width: 140px;
-    height: 210px;
-    padding: 10px;
-    border: 5px solid black;
-    margin-top: 10px;
-}
-
-
-/* Center the cards within the divs */
-.card-div {
-    display: inline-block;
-    text-align: center;
-}
-
-/* Game length display box */
-#length-box {
-    height: 100px;
-    width: 100px;
-    border: solid 1px black;
+    /* Footer logo */
+    #footer-logo-content {
+        padding-left: 5px;
+        text-align: left;
+        font-size: 20px;
+    }
+    #footer-logo {
+        width: 60%;
+    }
+    #footer-github {
+        width: 40%;
+    }
 }
 
 
