--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,11 +23,6 @@ a {
     text-transform: uppercase;
 }
 
-/* Active page class */
-.active-page {
-    text-decoration: underline wavy;
-}
-
 /* Keep footer at the bottom of the page */
 body {
     display: flex;
@@ -90,6 +85,7 @@ body {
 /*Individual list items */
 .nav-list-item {
     width: 90px;
+    cursor: pointer;
 }
 
 /* Navigation anchor */
