--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,6 +291,15 @@ tbody>tr:hover {
 
 /* --------------- MODALS ------------------- */
 
+#modal-background {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    display: none;
+}
+
 #sequence-error-modal,
 #guess-error-modal,
 #results-modal {
@@ -309,7 +318,7 @@ tbody>tr:hover {
     border-radius: 8%;
     background-color: #F5F5F5;
     text-align: center;
-    z-index: 5;
+    z-index: 2;
 } 
 .modal-top-icon {
     font-size: 1.6rem;
