style: show the spacers for small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -649,4 +649,8 @@ tbody>tr:hover {
     #footer-logo {
         width: 50%;
     }
+    #github-link {
+        margin: auto;
+        width: 100%;
+    }
 }
