--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,6 +245,7 @@ main {
     font-family: "Cabin", Arial, Helvetica, sans-serif;
     width: 150px;
     text-align: center;
+    margin-bottom: 10px;
 }
 /* Card images */
 .card-div {
