--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,6 +440,52 @@ tbody>tr:hover {
     margin: auto;
 }
 
+/* 404 */
+#main-404 {
+    text-align: center;
+}
+#display-404 {
+    margin: auto;
+    width: 200px;
+    height: 300px;
+    border: 2px solid black;
+    border-radius: 8%;
+    background-color: #F5F5F5;
+    text-align: center;
+    color: #333A3F;
+} 
+
+#top-404,
+#bottom-404 {
+    font-family: "Josefin Sans", Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 32pt;
+    margin: 0;
+}
+#top-404 {
+    text-align: left;
+    padding-left: 10px;
+}
+#header-404{
+    font-family: "Josefin Sans", Arial, Helvetica, sans-serif;
+}
+#message-404{
+    font-family: "Arimo", Arial, Helvetica, sans-serif;
+}
+#link-404 {
+    font-family: "Arimo", Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+#link-404:hover {
+    color:#CF1020;
+}
+#bottom-404 {
+    color:#333A3F;
+    text-align: right;
+    padding-right: 10px;
+    padding-top: 40px;
+}
+
 /* --------------- FOOTER ------------------- */
 /* Complete footer */
 #footer {
