--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ tbody>tr:hover {
 #modal-background {
     height: 100vh;
     width: 100vw;
-    position: absolute;
+    position: fixed;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
     display: none;
