--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,21 +183,20 @@ main {
 .game-button, 
 .submit-guess {
     font-family: "Cabin", Arial, Helvetica, sans-serif;
-    color:#333A3F;
-    background-color: #F5F5F5;
+    background-color:#333A3F;
+    color: #F5F5F5;
     transition: 
-        color 0.7s,
+        color 0.5s,
         background-color 0.7s;
 }
-.game-button:hover,
-.submit-guess:hover {
+.submit-guess-pressed {}
+.game-button:hover {
     color: #F5F5F5;
     background-color: #CF1020;
 }
-.submit-guess:disabled {
-    color: #F5F5F5;
-    background-color: #333A3F;
-    opacity: 0.7;
+.submit-guess:hover {
+    background-color: #F5F5F5;
+    color: #333A3F;
 }
 #quantity-label {
     font-family: "Arimo", Arial, Helvetica, sans-serif;
@@ -258,6 +257,22 @@ tbody>tr:hover {
 }
 .correct-column{
     width: 10%;
+}
+/* Guessing table transitions */
+.correct-transition,
+.incorrect-transition {
+    transition: color 0.5s ease, background-color 5s ease;
+    background-color: #F5F5F5;
+}
+.correct {
+    background-color: green;
+    color: #F5F5F5;
+    font-family: cabin;
+}
+.incorrect{
+    background-color: #CF1020;
+    color: #F5F5F5;
+    font-family: cabin;
 }
 
 /*-------------------- MODALS --------------------*/
